fix flex wrapping

--- a/aliem/styles/collections/flex.styl
+++ b/aliem/styles/collections/flex.styl
@@ -6,9 +6,15 @@
 
 .aliem-flex__item
     flex: auto
+    width: auto
     padding: 10px
 
 for n in 12 25 33 50
     .aliem-flex__item_{n}
-        max-width: percentage(n / 100)
-        flex-basis: percentage(n / 100)
+        max-width: ((n + 2) / 100) * 1100px
+        min-width: ((n - 2) / 100) * 1100px
+
+@media (max-width: 480px)
+    .aliem-flex__item
+        max-width: 300px
+        min-width: 300px
